menambahkan video pada quizizz

--- a/public/cheatQuizizz.html
+++ b/public/cheatQuizizz.html
@@ -117,11 +117,17 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
     <!-- about section starts  -->
     <section class="about">
 
-        <div class="image">
-            <img src="../images/quizizz thumbnail.png" alt="">
-            <small><i><b>Gambar 1.0</b></i></small>
-        </div>
-        <div class="image">
+        <div class="container">
+            <div class="image-container">
+                <div class="image"><img src="../images/quizizz thumbnail.png" alt="" style="width: 100%;">
+                </div> <br>
+                <small><i><b>Gambar q.0</b></i></small>
+            </div>
+
+            <div class="popup-img">
+                <span>&times;</span>
+                <img src="../images/quizizz thumbnail.png" alt="">
+            </div>
         </div>
 
         <div class="content">
@@ -291,6 +297,16 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                 </table>
             </div>
             </p>
+            <br>
+            <p>VIDEO MENGGUNAKAN TEKNIK 1</p>
+            <!-- video 1 -->
+
+            <div class="main-video-container">
+                <video src="../images/cara quizizz ke 1.mp4" loop controls class="main-video"></video>
+                <h3 class="main-vid-title">Cara cheat quizizz jawaban cara 1</h3>
+            </div>
+
+            <!-- akhir video 1 -->
 
 
             <h3 class="about-title" style="margin-top: 50px; font-size: 30px; text-align: center;">MENGGUNAKAN
@@ -376,9 +392,19 @@ fetch("https://raw.githubusercontent.com/gbaranski/quizizz-cheat/master/dist/bun
                     </div>
                     <p>untuk jawaban nya yang terang sendiri yaa..</p>
                 </li>
+                <br>
+                <p>VIDEO MENGGUNAKAN TEKNIK 2</p>
+                <!-- video 2 -->
+
+                <div class="main-video-container">
+                    <video src="../images/cara quizizz ke 2.mp4" loop controls class="main-video"></video>
+                    <h3 class="main-vid-title">Cara cheat quizizz jawaban cara 2</h3>
+                </div>
+
+                <!-- akhir video 2 -->
 
 
-                <h3 class="about-title" style="margin-top: 50px; font-size: 30px; text-align: center;">MENGGUNAKAN
+                <h3 class="about-title" style="margin-top: 60px; font-size: 30px; text-align: center;">MENGGUNAKAN
                     <br>CARA <br> 3
                 </h3>
 
