--- a/public/cheatQuizizz.html
+++ b/public/cheatQuizizz.html
@@ -225,7 +225,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                                 <span style="color: salmon;">Nama : </span> QUIZIZZHELPER<br>
                                 <span style="color: salmon;">URL : </span> yang kalian copy tadi paste disini
                             </p>
-                            <div class="image-container">
+                            <div class="image-containe">
                                 <div class="image"><img src="../images/bookmark.jpg" alt="" style="width: 100%;">
                                 </div> <br>
                                 <small><i><b>Gambar 2.0</b></i></small>
