menambahkan animasi warna

--- a/public/1router.html
+++ b/public/1router.html
@@ -54,10 +54,10 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="../home.html">home</a>
-            <a href="../public/about.html">about</a>
-            <a href="../public/blog.html">blog</a>
-            <a href="../public/contact.html">contact</a>
+            <a href="../home.html" class="anim-text">home</a>
+            <a href="../public/about.html" class="anim-text">about</a>
+            <a href="../public/blog.html" class="anim-text">blog</a>
+            <a href="../public/contact.html" class="anim-text">contact</a>
         </nav>
 
         <div class="icons">
@@ -141,7 +141,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                     defaultgateaway
                 </p>
                 <p
-                    style="margin-top: 5px; font-family: Georgia, 'Times New Roman', Times, serif; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                    style="margin-top: 5px; font-family: Georgia, 'Times New Roman', Times, serif; background-color: #f9f9f9; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                     Router> <br>
                     Router><span style="background-color: yellowgreen; color: white;">enable</span> <br>
                     Router#<span style="background-color: teal; color: white;">conf t</span> <br>
@@ -163,7 +163,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                     <b>5.)</b> Setting IP DHCP :
                 </p>
                 <p
-                    style="font-family: Georgia, 'Times New Roman', Times, serif;background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                    style="font-family: Georgia, 'Times New Roman', Times, serif; background-color: #f9f9f9; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                     Router>enable <br>
                     Router#conf t <br>
                     Enter configuration commands, one per line. End with CNTL/Z. <br>
