--- a/public/2router.html
+++ b/public/2router.html
@@ -54,10 +54,10 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="../home.html">home</a>
-            <a href="../public/about.html">about</a>
-            <a href="../public/blog.html">blog</a>
-            <a href="../public/contact.html">contact</a>
+            <a href="../home.html" class="anim-text">home</a>
+            <a href="../public/about.html" class="anim-text">about</a>
+            <a href="../public/blog.html" class="anim-text">blog</a>
+            <a href="../public/contact.html" class="anim-text">contact</a>
         </nav>
 
         <div class="icons">
@@ -146,10 +146,18 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                 yang harus kita lakukan adalah kita TAMBAHIN port nya pada router. "Caranya ?" <br>
                 kalian tinggal pencet : <br>
             <ol>
-                <li>Router</li>
-                <li>Matikan router nya</li>
-                <li>Pilih yang <i>WIC-1ENET</i>, Lalu drag and drop ke tempat yang kosong</li>
-                <li>Jangan lupa nyalakan kembali router nya </li>
+                <li style="margin-top: 3px;">
+                    <p>Router </p>
+                </li>
+                <li>
+                    <p> Matikan router nya </p>
+                </li>
+                <li>
+                    <p> Pilih yang <i>WIC-1ENET</i>, Lalu drag and drop ke tempat yang kosong</p>
+                </li>
+                <li>
+                    <p>Jangan lupa nyalakan kembali router nya </p>
+                </li>
             </ol>
             </p>
 
@@ -163,7 +171,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             </p>
             <h1 class="heading"> setting IP <br> ROUTER 0 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Would you like to enter the initial configuration dialog? [yes/no]: no <br>
 
                 Press RETURN to get started! <br>
@@ -212,7 +220,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             </p>
             <h1 class="heading"> setting IP <br> ROUTER 1 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Would you like to enter the initial configuration dialog? [yes/no]: no <br>
 
                 Press RETURN to get started! <br>
@@ -268,7 +276,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             </p>
             <h1 class="heading"> setting DHCP <br> ROUTER 0 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;  background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -286,7 +294,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             </p>
             <h1 class="heading"> setting DHCP <br> ROUTER 1 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;  background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -311,7 +319,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             </p>
             <h1 class="heading"> setting IP route <br> ROUTER 0 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;  background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -322,7 +330,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             </p>
             <h1 class="heading"> setting IP route <br> ROUTER 1 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;  background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
