--- a/public/3router.html
+++ b/public/3router.html
@@ -54,10 +54,10 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="../home.html">home</a>
-            <a href="../public/about.html">about</a>
-            <a href="../public/blog.html">blog</a>
-            <a href="../public/contact.html">contact</a>
+            <a href="../home.html" class="anim-text">home</a>
+            <a href="../public/about.html" class="anim-text">about</a>
+            <a href="../public/blog.html" class="anim-text">blog</a>
+            <a href="../public/contact.html" class="anim-text">contact</a>
         </nav>
 
         <div class="icons">
@@ -184,7 +184,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                 <small><i><b>Gambar 2.0</b></i></small>
             </div>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;  background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Would you like to enter the initial configuration dialog? [yes/no]: no <br>
 
                 Press RETURN to get started! <br>
@@ -230,7 +230,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                 <small><i><b>Gambar 3.0</b></i></small>
             </div>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;  background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Would you like to enter the initial configuration dialog? [yes/no]: no <br>
 
                 Press RETURN to get started! <br>
@@ -270,7 +270,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
             <h1 class="heading"> setting IP <br> ROUTER 2 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;  background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Would you like to enter the initial configuration dialog? [yes/no]: no <br>
 
                 Press RETURN to get started! <br>
@@ -306,7 +306,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
             <h1 class="heading"> setting DHCP <br> ROUTER 0 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;  background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -325,7 +325,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
             <h1 class="heading"> setting DHCP <br> ROUTER 1 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;  background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Router>enable <br>
                 Router# <br>
                 Router#conf t <br>
@@ -346,7 +346,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
             <h1 class="heading"> setting DHCP <br> ROUTER 2 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -380,7 +380,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             </p>
             <h1 class="heading"> setting IP route <br> ROUTER 0 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;  background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -394,7 +394,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
             <h1 class="heading"> setting IP route <br> ROUTER 1 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic;  background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
@@ -407,7 +407,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
             <h1 class="heading"> setting IP route <br> ROUTER 2 </h1>
             <p
-                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: grey; color: honeydew; padding: 5px; border-radius: 10px;">
+                style="font-family: Georgia, 'Times New Roman', Times, serif; font-style: italic; background-color: #eeeeee; padding: 10px; border-radius: 5px; border-radius: 5px; border-left: 5px solid green;">
                 Router>enable <br>
                 Router#conf t <br>
                 Enter configuration commands, one per line. End with CNTL/Z. <br>
