--- a/public/cisco.html
+++ b/public/cisco.html
@@ -54,10 +54,10 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="../home.html">home</a>
-            <a href="./about.html">about</a>
-            <a href="../public/blog.html">blog</a>
-            <a href="../public/contact.html">contact</a>
+            <a href="../home.html" class="anim-text">home</a>
+            <a href="./about.html" class="anim-text">about</a>
+            <a href="../public/blog.html" class="anim-text">blog</a>
+            <a href="../public/contact.html" class="anim-text">contact</a>
         </nav>
 
         <div class="icons">
@@ -111,70 +111,74 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
     <!-- contact section starts  -->
 
-    <section class="contact">
-        <p style="text-align: center; color: red; font-size: 20px;">*DISARANKAN MENGGUNAKAN CISCO VERSI > 7.2* </p>
-        <h1 class="heading"> Pilih Tipe </h1>
+    <div class="warna1">
+        <section class="contact">
+            <p style="text-align: center; color: red; font-size: 20px;">*DISARANKAN MENGGUNAKAN CISCO VERSI > 7.2* </p>
+            <h1 class="heading"> Pilih Tipe </h1>
 
-        <div class="icons-container">
+            <div class="icons-container">
 
-            <div class="icons" style="border-radius: 20px;">
-                <div class="gambar">
-                    <img src="../images/topologi.png" alt="" style="width: 220px; border-radius: 20px;">
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/topologi.png" alt="" style="width: 220px; border-radius: 20px;">
+                    </div>
+                    <h3>1 ROUTER </h3>
+                    <h3>1 SWITCH</h3>
+                    <h3>2pc</h3>
+                    <a href="../public/1router.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
                 </div>
-                <h3>1 ROUTER </h3>
-                <h3>1 SWITCH</h3>
-                <h3>2pc</h3>
-                <a href="../public/1router.html"><button type="button"
-                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
-            </div>
 
-            <div class="icons" style="border-radius: 20px;">
-                <div class="gambar">
-                    <img src="../images/topologi4.png" alt="" style="width: 220px; height: 180px; border-radius: 20px;">
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/topologi4.png" alt=""
+                            style="width: 220px; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>2 ROUTER</h3>
+                    <h3>4 SWITCH</h3>
+                    <h3>8 PC</h3>
+                    <a href="../public/2router.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
                 </div>
-                <h3>2 ROUTER</h3>
-                <h3>4 SWITCH</h3>
-                <h3>8 PC</h3>
-                <a href="../public/2router.html"><button type="button"
-                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
-            </div>
 
-            <div class="icons" style="border-radius: 20px;">
-                <div class="gambar">
-                    <img src="../images/topologi5.png" alt="" style="width: 220px; height: 180px; border-radius: 20px;">
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/topologi5.png" alt=""
+                            style="width: 220px; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>3 ROUTER </h3>
+                    <h3>6 SWITCH</h3>
+                    <h3>12 PC</h3>
+                    <a href="../public/3router.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
                 </div>
-                <h3>3 ROUTER </h3>
-                <h3>6 SWITCH</h3>
-                <h3>12 PC</h3>
-                <a href="../public/3router.html"><button type="button"
-                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
-            </div>
-            <div class="icons" style="border-radius: 20px;">
-                <div class="gambar">
-                    <img src="../images/vlan1.png" alt="" style="width: 220px; height: 180px; border-radius: 20px;">
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/vlan1.png" alt="" style="width: 220px; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>VLAN </h3>
+                    <h3>1 SWITCH</h3>
+                    <a href="../public/vlan1.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
                 </div>
-                <h3>VLAN </h3>
-                <h3>1 SWITCH</h3>
-                <a href="../public/vlan1.html"><button type="button"
-                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
-            </div>
-            <div class="icons" style="border-radius: 20px;">
-                <div class="gambar">
-                    <img src="../images/serverDHCP.png" alt=""
-                        style="width: 220px; height: 180px; border-radius: 20px;">
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/serverDHCP.png" alt=""
+                            style="width: 220px; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>1 SERVER </h3>
+                    <h3>1 SWITCH</h3>
+                    <h3>3 PC</h3>
+                    <a href="../public/1server.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
                 </div>
-                <h3>1 SERVER </h3>
-                <h3>1 SWITCH</h3>
-                <h3>3 PC</h3>
-                <a href="../public/1server.html"><button type="button"
-                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
             </div>
-        </div>
-        <marquee direction="left"
-            style="font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
-            HARUS SEMANGAT BROO, JANGAN LEMES
-        </marquee>
-    </section>
+            <marquee direction="left"
+                style="font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+                HARUS SEMANGAT BROO, JANGAN LEMES
+            </marquee>
+        </section>
+    </div>
     <!-- switch ke video -->
 
     <section class="faq">
