--- a/home.html
+++ b/home.html
@@ -54,10 +54,10 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
       <nav class="navbar">
          <div id="close-navbar" class="fas fa-times"></div>
-         <a href="home.html">home</a>
-         <a href="./public/about.html">about</a>
-         <a href="./public/blog.html">blog</a>
-         <a href="./public/contact.html">contact</a>
+         <a href="home.html" class="anim-text">home</a>
+         <a href="./public/about.html" class="anim-text">about</a>
+         <a href="./public/blog.html" class="anim-text">blog</a>
+         <a href="./public/contact.html" class="anim-text">contact</a>
       </nav>
 
       <div class="icons">
@@ -151,249 +151,253 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
    <!-- subjects section starts  -->
 
-   <section class="subjects">
+   <div class="warna">
+      <section class="subjects">
 
-      <h1 class="heading">our popular subjects</h1>
+         <h1 class="heading">our popular subjects</h1>
 
-      <div class="box-container">
+         <div class="box-container">
 
-         <div class="box">
-            <a href="./public/blog.html">
-               <img src="images/cisco1.png" alt="">
-               <h3>Cisco packet Tracer</h3>
-               <p>5 modules</p>
-            </a>
-         </div>
-
-         <div class="box">
-            <a href="./public/blog.html">
-               <img src="images/homeexcel.png" alt="">
-               <h3>Ms.Excel</h3>
-               <p>6 modules</p>
-            </a>
-         </div>
-
-         <div class="box">
-            <img src="images/logolinux.png" alt="">
-            <h3>Linux</h3>
-            <p>3 modules</p>
-         </div>
-
-         <div class="box">
-            <img src="images/cyber4.png" alt="">
-            <h3>Cyber Scurity</h3>
-            <p>10 modules</p>
-         </div>
-
-         <div class="box">
-            <img src="images/development.png" alt="">
-            <h3>development</h3>
-            <p>12 modules</p>
-         </div>
-
-         <div class="box">
-            <img src="images/subject-icon-5.png" alt="">
-            <h3>science</h3>
-            <p>12 modules</p>
-         </div>
-
-         <div class="box">
-            <img src="images/subject-icon-6.png" alt="">
-            <h3>engineering</h3>
-            <p>12 modules</p>
-         </div>
-
-      </div>
-
-   </section>
-
-   <!-- subjects section ends -->
-
-   <!-- home courses slider section starts  -->
-
-   <section class="home-courses">
-
-      <h1 class="heading"> our popular courses </h1>
-
-      <div class="swiper home-courses-slider">
-
-         <div class="swiper-wrapper">
-
-            <div class="swiper-slide slide">
-               <div class="image">
-                  <img src="images/course-1-1.png" alt="">
-                  <h3>web development</h3>
-               </div>
-               <div class="content">
-                  <h3>web development</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
-                  <a href="#" class="btn">read more</a>
-               </div>
+            <div class="box">
+               <a href="./public/blog.html">
+                  <img src="images/cisco1.png" alt="">
+                  <h3>Cisco packet Tracer</h3>
+                  <p>5 modules</p>
+               </a>
             </div>
 
-            <div class="swiper-slide slide">
-               <div class="image">
-                  <img src="images/course-1-2.png" alt="">
-                  <h3>web development</h3>
-               </div>
-               <div class="content">
-                  <h3>web development</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
-                  <a href="#" class="btn">read more</a>
-               </div>
+            <div class="box">
+               <a href="./public/blog.html">
+                  <img src="images/homeexcel.png" alt="">
+                  <h3>Ms.Excel</h3>
+                  <p>6 modules</p>
+               </a>
             </div>
 
-            <div class="swiper-slide slide">
-               <div class="image">
-                  <img src="images/course-1-3.png" alt="">
-                  <h3>web development</h3>
-               </div>
-               <div class="content">
-                  <h3>web development</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
-                  <a href="#" class="btn">read more</a>
-               </div>
+            <div class="box">
+               <img src="images/logolinux.png" alt="">
+               <h3>Linux</h3>
+               <p>3 modules</p>
             </div>
 
-            <div class="swiper-slide slide">
-               <div class="image">
-                  <img src="images/course-1-4.png" alt="">
-                  <h3>web development</h3>
-               </div>
-               <div class="content">
-                  <h3>web development</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
-                  <a href="#" class="btn">read more</a>
-               </div>
+            <div class="box">
+               <img src="images/cyber4.png" alt="">
+               <h3>Cyber Scurity</h3>
+               <p>10 modules</p>
             </div>
 
-            <div class="swiper-slide slide">
-               <div class="image">
-                  <img src="images/course-1-5.png" alt="">
-                  <h3>web development</h3>
-               </div>
-               <div class="content">
-                  <h3>web development</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
-                  <a href="#" class="btn">read more</a>
-               </div>
+            <div class="box">
+               <img src="images/development.png" alt="">
+               <h3>development</h3>
+               <p>12 modules</p>
             </div>
 
-            <div class="swiper-slide slide">
-               <div class="image">
-                  <img src="images/course-1-6.png" alt="">
-                  <h3>web development</h3>
-               </div>
-               <div class="content">
-                  <h3>web development</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
-                  <a href="#" class="btn">read more</a>
-               </div>
+            <div class="box">
+               <img src="images/subject-icon-5.png" alt="">
+               <h3>science</h3>
+               <p>12 modules</p>
+            </div>
+
+            <div class="box">
+               <img src="images/subject-icon-6.png" alt="">
+               <h3>engineering</h3>
+               <p>12 modules</p>
             </div>
 
          </div>
 
-      </div>
+      </section>
 
-   </section>
+      <!-- subjects section ends -->
 
-   <!-- home courses slider section ends -->
+      <!-- home courses slider section starts  -->
 
-   <!-- apa kata mereka -->
-   <section class="reviews">
+      <section class="home-courses">
 
-      <h1 class="heading"> Apa kata mereka </h1>
+         <h1 class="heading"> our popular courses </h1>
 
-      <div class="swiper reviews-slider">
+         <div class="swiper home-courses-slider">
 
-         <div class="swiper-wrapper">
+            <div class="swiper-wrapper">
 
-            <div class="swiper-slide slide">
-               <p>interfacenya bagus banget</p>
-               <img src="images/katamereka5.jpg" alt="">
-               <h3>Ir.H.Ferdinand Valentino rosi</h3>
-               <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
+               <div class="swiper-slide slide">
+                  <div class="image">
+                     <img src="images/course-1-1.png" alt="">
+                     <h3>web development</h3>
+                  </div>
+                  <div class="content">
+                     <h3>web development</h3>
+                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
+                     <a href="#" class="btn">read more</a>
+                  </div>
                </div>
-            </div>
 
-            <div class="swiper-slide slide">
-               <p>materinya keren banget kak, saya suka banget dengan materinya</p>
-               <img src="images/katamereka4.jpg" alt="">
-               <h3>Ir.H.sahrull</h3>
-               <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
+               <div class="swiper-slide slide">
+                  <div class="image">
+                     <img src="images/course-1-2.png" alt="">
+                     <h3>web development</h3>
+                  </div>
+                  <div class="content">
+                     <h3>web development</h3>
+                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
+                     <a href="#" class="btn">read more</a>
+                  </div>
                </div>
-            </div>
 
-            <div class="swiper-slide slide">
-               <p>Thanks untuk NaasWeb yang sudah membagikan ilmunya, semua videonya gampang di mengerti, Untuk
-                  NasWeb Keren dan Mantap</p>
-               <img src="images/kattameraka2.jpg" alt="">
-               <h3>Dr.Dr.Ir.Mora Devent M.Pd</h3>
-               <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
+               <div class="swiper-slide slide">
+                  <div class="image">
+                     <img src="images/course-1-3.png" alt="">
+                     <h3>web development</h3>
+                  </div>
+                  <div class="content">
+                     <h3>web development</h3>
+                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
+                     <a href="#" class="btn">read more</a>
+                  </div>
                </div>
-            </div>
 
-            <div class="swiper-slide slide">
-               <p>Terimakasih NasWeb sudah berbagi ilmu dan mengajarkan ttg dunia teknologi semoga kedepannya
-                  makin lebih baik 💪</p>
-               <img src="images/katameraka1.jpg" alt="">
-               <h3>Ir.Indra gandhi</h3>
-               <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
+               <div class="swiper-slide slide">
+                  <div class="image">
+                     <img src="images/course-1-4.png" alt="">
+                     <h3>web development</h3>
+                  </div>
+                  <div class="content">
+                     <h3>web development</h3>
+                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
+                     <a href="#" class="btn">read more</a>
+                  </div>
                </div>
-            </div>
 
-            <div class="swiper-slide slide">
-               <p>Terimakasih banget sama NasWeb atas ilmu yang sangat bermanfaat!</p>
-               <img src="images/katatmeraka3.jpg" alt="">
-               <h3>Ir.H.Brian putra</h3>
-               <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
+               <div class="swiper-slide slide">
+                  <div class="image">
+                     <img src="images/course-1-5.png" alt="">
+                     <h3>web development</h3>
+                  </div>
+                  <div class="content">
+                     <h3>web development</h3>
+                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
+                     <a href="#" class="btn">read more</a>
+                  </div>
                </div>
-            </div>
 
-            <div class="swiper-slide slide">
-               <p>Yang dulunya belajar di google masih minim tutorial versi bahasa, dengan lahirnya NasWeb semua
-                  masalah yang saya alami sudah teratasi dan di setiap video penjelasannya juga mudah dimengerti. :v</p>
-               <img src="images/katamereka6.jpg" alt="">
-               <h3>Ir.Sultan.Hendri</h3>
-               <div class="stars">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
+               <div class="swiper-slide slide">
+                  <div class="image">
+                     <img src="images/course-1-6.png" alt="">
+                     <h3>web development</h3>
+                  </div>
+                  <div class="content">
+                     <h3>web development</h3>
+                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ratione?</p>
+                     <a href="#" class="btn">read more</a>
+                  </div>
                </div>
+
             </div>
 
          </div>
 
-      </div>
+      </section>
 
-   </section>
+
+      <!-- home courses slider section ends -->
+
+      <!-- apa kata mereka -->
+      <section class="reviews">
+
+         <h1 class="heading"> Apa kata mereka </h1>
+
+         <div class="swiper reviews-slider">
+
+            <div class="swiper-wrapper">
+
+               <div class="swiper-slide slide">
+                  <p>interfacenya bagus banget</p>
+                  <img src="images/katamereka5.jpg" alt="">
+                  <h3>Ir.H.Ferdinand Valentino rosi</h3>
+                  <div class="stars">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star-half-alt"></i>
+                  </div>
+               </div>
+
+               <div class="swiper-slide slide">
+                  <p>materinya keren banget kak, saya suka banget dengan materinya</p>
+                  <img src="images/katamereka4.jpg" alt="">
+                  <h3>Ir.H.sahrull</h3>
+                  <div class="stars">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star-half-alt"></i>
+                  </div>
+               </div>
+
+               <div class="swiper-slide slide">
+                  <p>Thanks untuk NaasWeb yang sudah membagikan ilmunya, semua videonya gampang di mengerti, Untuk
+                     NasWeb Keren dan Mantap</p>
+                  <img src="images/kattameraka2.jpg" alt="">
+                  <h3>Dr.Dr.Ir.Mora Devent M.Pd</h3>
+                  <div class="stars">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star-half-alt"></i>
+                  </div>
+               </div>
+
+               <div class="swiper-slide slide">
+                  <p>Terimakasih NasWeb sudah berbagi ilmu dan mengajarkan ttg dunia teknologi semoga kedepannya
+                     makin lebih baik 💪</p>
+                  <img src="images/katameraka1.jpg" alt="">
+                  <h3>Ir.Indra gandhi</h3>
+                  <div class="stars">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star-half-alt"></i>
+                  </div>
+               </div>
+
+               <div class="swiper-slide slide">
+                  <p>Terimakasih banget sama NasWeb atas ilmu yang sangat bermanfaat!</p>
+                  <img src="images/katatmeraka3.jpg" alt="">
+                  <h3>Ir.H.Brian putra</h3>
+                  <div class="stars">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star-half-alt"></i>
+                  </div>
+               </div>
+
+               <div class="swiper-slide slide">
+                  <p>Yang dulunya belajar di google masih minim tutorial versi bahasa, dengan lahirnya NasWeb semua
+                     masalah yang saya alami sudah teratasi dan di setiap video penjelasannya juga mudah dimengerti. :v
+                  </p>
+                  <img src="images/katamereka6.jpg" alt="">
+                  <h3>Ir.Sultan.Hendri</h3>
+                  <div class="stars">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star-half-alt"></i>
+                  </div>
+               </div>
+
+            </div>
+
+         </div>
+
+      </section>
+   </div>
    <!-- apa kata mereka ends -->
 
 
