--- a/public/blog.html
+++ b/public/blog.html
@@ -52,12 +52,12 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
       <a href="#" class="logo"> <i class="fas fa-lightbulb"></i> NasWeb </a>
 
-      <nav class="navbar">
+      <nav class="navbar ">
          <div id="close-navbar" class="fas fa-times"></div>
-         <a href="../home.html">home</a>
-         <a href="../public/about.html">about</a>
-         <a href="../public/blog.html">blog</a>
-         <a href="../public/contact.html">contact</a>
+         <a href="../home.html" class="anim-text">home</a>
+         <a href="../public/about.html" class="anim-text">about</a>
+         <a href="../public/blog.html" class="anim-text">blog</a>
+         <a href="../public/contact.html" class="anim-text">contact</a>
       </nav>
 
       <div class="icons">
@@ -109,169 +109,177 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
       <p> <a href="../home.html">home</a> / Blog </p>
    </section>
 
-   <section class="courses">
+   <div class="warna">
 
-      <h1 class="heading"> Blog</h1>
+      <section class="courses">
 
-      <div class="box-container">
+         <h1 class="heading"> Blog</h1>
 
-         <div class="box">
-            <div class="image">
-               <img src="../images/cisco_banner.jpg" alt="">
-               <h3>CisCo</h3>
-            </div>
-            <div class="content">
-               <h3>choose what's best for you!</h3>
-               <p>Packet Tracer adalah simulator alat-alat jaringan Cisco yang sering digunakan sebagai media
-                  pembelajaran dan pelatihan, dan juga dalam bidang penelitian simulasi jaringan komputer!</p>
-               <a href="../public/cisco.html" class="btn">read more</a>
-               <div class="icons">
-                  <span> <i class="fas fa-user"></i> Ignasius </span>
-                  <span> <i class="fas fa-clock"></i> 6 hours </span>
+         <div class="box-container">
+
+            <div class="box">
+               <div class="image">
+                  <img src="../images/cisco_banner.jpg" alt="">
+                  <h3>CisCo</h3>
+               </div>
+               <div class="content">
+                  <h3>choose what's best for you!</h3>
+                  <p>Packet Tracer adalah simulator alat-alat jaringan Cisco yang sering digunakan sebagai media
+                     pembelajaran dan pelatihan, dan juga dalam bidang penelitian simulasi jaringan komputer!</p>
+                  <a href="../public/cisco.html" class="btn">read more</a>
+                  <div class="icons">
+                     <span> <i class="fas fa-user"></i> Ignasius </span>
+                     <span> <i class="fas fa-clock"></i> 6 hours </span>
+                  </div>
                </div>
             </div>
-         </div>
 
-         <div class="box">
-            <div class="image">
-               <img src="../images/MS-Excel.webp" alt="" style="border:1px solid #0eb582; border-bottom: none;">
-               <h3>Excel</h3>
-            </div>
-            <div class="content">
-               <h3>choose what's best for you!</h3>
-               <p>Microsoft Excel adalah sebuah aplikasi yang digunakan untuk mengolah sebuah data dengan otomatis
-                  melalui berbagai bentuk seperti rumus, perhitungan dasar, pengolahan data, pembuatan tabel, pembuatan
-                  grafik hingga manajemen data.</p>
-               <a href="../public/excel.html" class="btn">read more</a>
-               <div class="icons">
-                  <span> <i class="fas fa-user"></i> Ignasius </span>
-                  <span> <i class="fas fa-clock"></i> 6 hours </span>
+            <div class="box">
+               <div class="image">
+                  <img src="../images/MS-Excel.webp" alt="" style="border:1px solid #0eb582; border-bottom: none;">
+                  <h3>Excel</h3>
+               </div>
+               <div class="content">
+                  <h3>choose what's best for you!</h3>
+                  <p>Microsoft Excel adalah sebuah aplikasi yang digunakan untuk mengolah sebuah data dengan otomatis
+                     melalui berbagai bentuk seperti rumus, perhitungan dasar, pengolahan data, pembuatan tabel,
+                     pembuatan
+                     grafik hingga manajemen data.</p>
+                  <a href="../public/excel.html" class="btn">read more</a>
+                  <div class="icons">
+                     <span> <i class="fas fa-user"></i> Ignasius </span>
+                     <span> <i class="fas fa-clock"></i> 6 hours </span>
+                  </div>
                </div>
             </div>
-         </div>
 
-         <div class="box">
-            <div class="image">
-               <img src="../images/course-2-1.jpg" alt="">
-               <h3>development</h3>
-            </div>
-            <div class="content">
-               <h3>choose what's best for you!</h3>
-               <p>akan mempelajari HTML, CSS , JS. dll</p>
-               <a href="#" class="btn">read more</a>
-               <div class="icons">
-                  <span> <i class="fas fa-user"></i> Ignasius </span>
-                  <span> <i class="fas fa-clock"></i> 6 hours </span>
+            <div class="box">
+               <div class="image">
+                  <img src="../images/course-2-1.jpg" alt="">
+                  <h3>development</h3>
+               </div>
+               <div class="content">
+                  <h3>choose what's best for you!</h3>
+                  <p>akan mempelajari HTML, CSS , JS. dll</p>
+                  <a href="#" class="btn">read more</a>
+                  <div class="icons">
+                     <span> <i class="fas fa-user"></i> Ignasius </span>
+                     <span> <i class="fas fa-clock"></i> 6 hours </span>
+                  </div>
                </div>
             </div>
-         </div>
 
-         <div class="box">
-            <div class="image">
-               <img src="../images/cyber3.png" alt="">
-               <h3>Cyber Scurity</h3>
-            </div>
-            <div class="content">
-               <h3>choose what's best for you!</h3>
-               <p>Keamanan komputer atau keamanan digital merupakan keamanan informasi yang terdapat pada komputer atau
-                  jaringan. Keamanan komputer juga dikenal dengan sebutan cybersecurity atau IT security.</p>
-               <a href="#" class="btn">read more</a>
-               <div class="icons">
-                  <span> <i class="fas fa-user"></i> Ignasius </span>
-                  <span> <i class="fas fa-clock"></i> 6 hours </span>
+            <div class="box">
+               <div class="image">
+                  <img src="../images/cyber3.png" alt="">
+                  <h3>Cyber Scurity</h3>
+               </div>
+               <div class="content">
+                  <h3>choose what's best for you!</h3>
+                  <p>Keamanan komputer atau keamanan digital merupakan keamanan informasi yang terdapat pada komputer
+                     atau
+                     jaringan. Keamanan komputer juga dikenal dengan sebutan cybersecurity atau IT security.</p>
+                  <a href="#" class="btn">read more</a>
+                  <div class="icons">
+                     <span> <i class="fas fa-user"></i> Ignasius </span>
+                     <span> <i class="fas fa-clock"></i> 6 hours </span>
+                  </div>
                </div>
             </div>
-         </div>
 
-         <div class="box">
-            <div class="image">
-               <img src="../images/linux2.png" style="border: 1px solid #0eb582; border-bottom: none;" alt="">
-               <h3>Linux</h3>
-            </div>
-            <div class="content">
-               <h3>choose what's best for you!</h3>
-               <p>Linux adalah sebuah Sistem Operasi berbasis UNIX yang merupakan hasil pengembangan Freeware dan Open
-                  Source. Oleh karena itu, Linux termasuk sistem operasi open source dan pertama kali dikembangkan oleh
-                  Linus Torvalds.</p>
-               <a href="#" class="btn">read more</a>
-               <div class="icons">
-                  <span> <i class="fas fa-user"></i> Ignasius </span>
-                  <span> <i class="fas fa-clock"></i> 6 hours </span>
+            <div class="box">
+               <div class="image">
+                  <img src="../images/linux2.png"
+                     style="border: 1px solid #0eb582; border-bottom: none; background-color: whitesmoke;" alt="">
+                  <h3>Linux</h3>
+               </div>
+               <div class="content">
+                  <h3>choose what's best for you!</h3>
+                  <p>Linux adalah sebuah Sistem Operasi berbasis UNIX yang merupakan hasil pengembangan Freeware dan
+                     Open
+                     Source. Oleh karena itu, Linux termasuk sistem operasi open source dan pertama kali dikembangkan
+                     oleh
+                     Linus Torvalds.</p>
+                  <a href="#" class="btn">read more</a>
+                  <div class="icons">
+                     <span> <i class="fas fa-user"></i> Ignasius </span>
+                     <span> <i class="fas fa-clock"></i> 6 hours </span>
+                  </div>
                </div>
             </div>
-         </div>
 
-         <div class="box">
-            <div class="image">
-               <img src="../images/course-2-6.jpg" alt="">
-               <h3>business</h3>
-            </div>
-            <div class="content">
-               <h3>choose what's best for you!</h3>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-               <a href="#" class="btn">read more</a>
-               <div class="icons">
-                  <span> <i class="fas fa-user"></i> Ignasius </span>
-                  <span> <i class="fas fa-clock"></i> 6 hours </span>
+            <div class="box">
+               <div class="image">
+                  <img src="../images/course-2-6.jpg" alt="">
+                  <h3>business</h3>
+               </div>
+               <div class="content">
+                  <h3>choose what's best for you!</h3>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
+                  <a href="#" class="btn">read more</a>
+                  <div class="icons">
+                     <span> <i class="fas fa-user"></i> Ignasius </span>
+                     <span> <i class="fas fa-clock"></i> 6 hours </span>
+                  </div>
                </div>
             </div>
-         </div>
 
-         <div class="box hide">
-            <div class="image">
-               <img src="../images/course-2-7.jpg" alt="">
-               <h3>teaching</h3>
-            </div>
-            <div class="content">
-               <h3>choose what's best for you!</h3>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-               <a href="#" class="btn">read more</a>
-               <div class="icons">
-                  <span> <i class="fas fa-user"></i> Ignasius </span>
-                  <span> <i class="fas fa-clock"></i> 6 hours </span>
+            <div class="box hide">
+               <div class="image">
+                  <img src="../images/course-2-7.jpg" alt="">
+                  <h3>teaching</h3>
+               </div>
+               <div class="content">
+                  <h3>choose what's best for you!</h3>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
+                  <a href="#" class="btn">read more</a>
+                  <div class="icons">
+                     <span> <i class="fas fa-user"></i> Ignasius </span>
+                     <span> <i class="fas fa-clock"></i> 6 hours </span>
+                  </div>
                </div>
             </div>
-         </div>
 
-         <div class="box hide">
-            <div class="image">
-               <img src="../images/course-2-8.jpg" alt="">
-               <h3>designing</h3>
-            </div>
-            <div class="content">
-               <h3>choose what's best for you!</h3>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-               <a href="#" class="btn">read more</a>
-               <div class="icons">
-                  <span> <i class="fas fa-user"></i> Ignasius </span>
-                  <span> <i class="fas fa-clock"></i> 6 hours </span>
+            <div class="box hide">
+               <div class="image">
+                  <img src="../images/course-2-8.jpg" alt="">
+                  <h3>designing</h3>
+               </div>
+               <div class="content">
+                  <h3>choose what's best for you!</h3>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
+                  <a href="#" class="btn">read more</a>
+                  <div class="icons">
+                     <span> <i class="fas fa-user"></i> Ignasius </span>
+                     <span> <i class="fas fa-clock"></i> 6 hours </span>
+                  </div>
                </div>
             </div>
-         </div>
 
-         <div class="box hide">
-            <div class="image">
-               <img src="../images/course-2-9.jpg" alt="">
-               <h3>dancing</h3>
-            </div>
-            <div class="content">
-               <h3>choose what's best for you!</h3>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-               <a href="#" class="btn">read more</a>
-               <div class="icons">
-                  <span> <i class="fas fa-user"></i> Ignasius </span>
-                  <span> <i class="fas fa-clock"></i> 6 hours </span>
+            <div class="box hide">
+               <div class="image">
+                  <img src="../images/course-2-9.jpg" alt="">
+                  <h3>dancing</h3>
+               </div>
+               <div class="content">
+                  <h3>choose what's best for you!</h3>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
+                  <a href="#" class="btn">read more</a>
+                  <div class="icons">
+                     <span> <i class="fas fa-user"></i> Ignasius </span>
+                     <span> <i class="fas fa-clock"></i> 6 hours </span>
+                  </div>
                </div>
             </div>
+
          </div>
 
-      </div>
+         <div class="load-more">
+            <div class="btn">load more</div>
+         </div>
 
-      <div class="load-more">
-         <div class="btn">load more</div>
-      </div>
-
-   </section>
+      </section>
+   </div>
 
 
 
