--- a/public/cheatQuizizz.html
+++ b/public/cheatQuizizz.html
@@ -59,10 +59,10 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="../home.html">home</a>
-            <a href="../public/about.html">about</a>
-            <a href="../public/blog.html">blog</a>
-            <a href="../public/contact.html">contact</a>
+            <a href="../home.html" class="anim-text">home</a>
+            <a href="../public/about.html" class="anim-text">about</a>
+            <a href="../public/blog.html" class="anim-text">blog</a>
+            <a href="../public/contact.html" class="anim-text">contact</a>
         </nav>
 
         <div class="icons">
@@ -111,7 +111,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
     <section class="heading-link">
         <h3>CHEAT <br> SOAL <br> QUIZIZZ</h3>
-        <p> <a href="../public/cisco.html">Back</a> / MiKrotik </p>
+        <p> <a href="../public/cisco.html">Back</a> / cheatQuizizz </p>
     </section>
 
     <!-- about section starts  -->
