--- a/public/contact.html
+++ b/public/contact.html
@@ -58,11 +58,11 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
       <a href="#" class="logo"> <i class="fas fa-lightbulb"></i> NasWeb </a>
 
       <nav class="navbar">
-         <div id="close-navbar" class="fas fa-times"></div>
-         <a href="../home.html">home</a>
-         <a href="../public/about.html">about</a>
-         <a href="../public/blog.html">blog</a>
-         <a href="../public/contact.html">contact</a>
+         <div id="close-navbar" class="fas fa-times anim-text"></div>
+         <a href="../home.html" class="anim-text">home</a>
+         <a href="../public/about.html" class="anim-text">about</a>
+         <a href="../public/blog.html" class="anim-text">Blog</a>
+         <a href="../public/contact.html" class="anim-text">contact</a>
       </nav>
 
       <div class="icons">
@@ -160,7 +160,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             <input type="email" placeholder="email" class="box" name="email">
             <input type="number" placeholder="phone" class="box" name="telpon">
             <textarea name="pesan" class="box" placeholder="message" id="" cols="30" rows="10"></textarea>
-            <button type="submit" value="send message" class="btn btn-kirim">KIRIM</button>
+            <button type="submit" value="send message" class="btn btn-kirim anim-text">KIRIM</button>
 
             <button class="btn btn-success btn-loading d-none" type="button" disabled>
                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
