--- a/public/excel.html
+++ b/public/excel.html
@@ -54,10 +54,10 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="../home.html">home</a>
-            <a href="./about.html">about</a>
-            <a href="../public/blog.html">blog</a>
-            <a href="../public/contact.html">contact</a>
+            <a href="../home.html" class="anim-text">home</a>
+            <a href="./about.html" class="anim-text">about</a>
+            <a href="../public/blog.html" class="anim-text">blog</a>
+            <a href="../public/contact.html" class="anim-text">contact</a>
         </nav>
 
         <div class="icons">
@@ -111,69 +111,71 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
     <!-- contact section starts  -->
 
-    <section class="contact">
+    <div class="warna1">
+        <section class="contact">
 
-        <div class="icons-container">
+            <div class="icons-container">
 
-            <div class="icons" style="border-radius: 20px;">
-                <div class="gambar">
-                    <img src="../images/thumbnail excel.png" alt="" style="width: 220px; border-radius: 20px;">
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/thumbnail excel.png" alt="" style="width: 220px; border-radius: 20px;">
+                    </div>
+                    <h3>PENGENALAN </h3>
+                    <h3>RUMUS</h3>
+                    <h3>MS.EXCEL</h3>
+                    <a href="rumusexcel.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 10px;">Buka</button></a>
                 </div>
-                <h3>PENGENALAN </h3>
-                <h3>RUMUS</h3>
-                <h3>MS.EXCEL</h3>
-                <a href="rumusexcel.html"><button type="button"
-                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 10px;">Buka</button></a>
-            </div>
 
-            <div class="icons" style="border-radius: 20px;">
-                <div class="gambar">
-                    <img src="../images/MS-Excel.webp" alt="" style="width: 220px; border-radius: 20px;">
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/MS-Excel.webp" alt="" style="width: 220px; border-radius: 20px;">
+                    </div>
+                    <h3>MASIH </h3>
+                    <h3>DALAM</h3>
+                    <h3>PENGEMBANGAN</h3>
+                    <h3>...</h3>
+                    <a href="rumusexcel.ht"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 10px;">Buka</button></a>
                 </div>
-                <h3>MASIH </h3>
-                <h3>DALAM</h3>
-                <h3>PENGEMBANGAN</h3>
-                <h3>...</h3>
-                <a href="rumusexcel.ht"><button type="button"
-                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 10px;">Buka</button></a>
-            </div>
 
-            <div class="icons" style="border-radius: 20px;">
-                <div class="gambar">
-                    <img src="../images/MS-Excel.webp" alt="" style="width: 220px; border-radius: 20px;">
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/MS-Excel.webp" alt="" style="width: 220px; border-radius: 20px;">
+                    </div>
+                    <h3>MASIH </h3>
+                    <h3>DALAM</h3>
+                    <h3>PENGEMBANGAN</h3>
+                    <h3>...</h3>
+                    <a href="rumusexcel.ht"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 10px;">Buka</button></a>
                 </div>
-                <h3>MASIH </h3>
-                <h3>DALAM</h3>
-                <h3>PENGEMBANGAN</h3>
-                <h3>...</h3>
-                <a href="rumusexcel.ht"><button type="button"
-                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 10px;">Buka</button></a>
-            </div>
 
-            <div class="icons" style="border-radius: 20px;">
-                <div class="gambar">
-                    <img src="../images/MS-Excel.webp" alt="" style="width: 220px; border-radius: 20px;">
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/MS-Excel.webp" alt="" style="width: 220px; border-radius: 20px;">
+                    </div>
+                    <h3>MASIH </h3>
+                    <h3>DALAM</h3>
+                    <h3>PENGEMBANGAN</h3>
+                    <h3>...</h3>
+                    <a href="rumusexcel.ht"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 10px;">Buka</button></a>
                 </div>
-                <h3>MASIH </h3>
-                <h3>DALAM</h3>
-                <h3>PENGEMBANGAN</h3>
-                <h3>...</h3>
-                <a href="rumusexcel.ht"><button type="button"
-                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 10px;">Buka</button></a>
-            </div>
 
-            <div class="icons" style="border-radius: 20px;">
-                <div class="gambar">
-                    <img src="../images/MS-Excel.webp" alt="" style="width: 220px; border-radius: 20px;">
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/MS-Excel.webp" alt="" style="width: 220px; border-radius: 20px;">
+                    </div>
+                    <h3>MASIH </h3>
+                    <h3>DALAM</h3>
+                    <h3>PENGEMBANGAN</h3>
+                    <h3>...</h3>
+                    <a href="rumusexcel.ht"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 10px;">Buka</button></a>
                 </div>
-                <h3>MASIH </h3>
-                <h3>DALAM</h3>
-                <h3>PENGEMBANGAN</h3>
-                <h3>...</h3>
-                <a href="rumusexcel.ht"><button type="button"
-                        style="padding: 10px; background-color: #0eb582; color: white; margin-top: 10px;">Buka</button></a>
-            </div>
-    </section>
+        </section>
+    </div>
     <!-- switch ke video -->
 
     <section class="faq">
