menambahkan animasi iklan

--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
    <header class="header">
 
-      <a href="#" class="logo"> <i class="fas fa-lightbulb"></i> NasWeb </a>
+      <a href="#" class="logo anim-text"> <i class="fas fa-lightbulb "></i> NasWeb </a>
 
       <nav class="navbar">
          <div id="close-navbar" class="fas fa-times"></div>
@@ -300,6 +300,10 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
 
       <!-- home courses slider section ends -->
+
+      <div class="paralax">
+
+      </div>
 
       <!-- apa kata mereka -->
       <section class="reviews">
