--- a/public/mikrotik_1.html
+++ b/public/mikrotik_1.html
@@ -134,7 +134,11 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                 standard, misalnya hanya sebagai gateway. Untuk keperluan beban yang besar.
             </P>
 
-            <h3 class="about-title" style="color: #409BD4; margin-top: 10px;">Bagaimana Konfigurasi VLAN di MikroTik:
+            <div class="paralax1">
+
+            </div>
+
+            <h3 class="about-title" style="color: #409BD4; margin-top: 15px;">Bagaimana Konfigurasi VLAN di MikroTik:
             </h3>
             <p>pertama-tama temen temen sudah mendownload software WinBox nya ya jika blom download <a
                     href="https://mikrotik.com/download">Klik disni</a>. <br>
