--- a/public/blog.html
+++ b/public/blog.html
@@ -50,7 +50,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
    <header class="header">
 
-      <a href="#" class="logo"> <i class="fas fa-lightbulb"></i> NasWeb </a>
+      <a href="#" class="logo anim-text"> <i class="fas fa-lightbulb"></i> NasWeb </a>
 
       <nav class="navbar ">
          <div id="close-navbar" class="fas fa-times"></div>
@@ -112,6 +112,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
    <div class="warna">
 
       <section class="courses">
+
 
          <h1 class="heading"> Blog</h1>
 
