--- a/public/contact.html
+++ b/public/contact.html
@@ -67,6 +67,10 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
       <div class="icons">
          <div id="account-btn" class="fas fa-user"></div>
+         <a href="../public/cuaca.html">
+            <div id="account-btn" class="fas fa-cloud " data-bs-toggle=" tooltip data-bs-placement=" bottom"
+               title="Lihat cuaca" style=" color: #00cccc;"></div>
+         </a>
          <div id="menu-btn" class="fas fa-bars"></div>
       </div>
 
